--- a/HTML/Вёрстка Bootstrap/LiveTV/style/insomniaStyle.css
+++ b/HTML/Вёрстка Bootstrap/LiveTV/style/insomniaStyle.css
@@ -1,7 +1,3 @@
-.insomnia-container {
-    width: 92.5%;
-}
-
 .insomnia-poster {
     width: 62.5%;
 }
@@ -11,11 +7,11 @@
 }
 
 .insomnia-about {
-    width: 35%;
+    width: 35.3%;
 }
 
 .insomnia-gallery {
-    width: 65%;
+    width: 64.7%;
     padding-left: 6.5%;
 }
 
