--- a/HTML/Вёрстка Bootstrap/LiveTV/style/subscriptionStyle.css
+++ b/HTML/Вёрстка Bootstrap/LiveTV/style/subscriptionStyle.css
@@ -4,7 +4,6 @@
 }
 
 .subscribe-container {
-    width: 92.5%;
     padding-bottom: 3rem;
 }
 
